feat: use virtual threads in LogTailService
This is safe as those threads are mainly sleeping and doing API calls.